--- a/Clustering.Rmd
+++ b/Clustering.Rmd
@@ -1,5 +1,5 @@
 ---
-  title: 'Support Vector Machines'
+  title: 'Clustering'
   output: rmarkdown::github_document
 ---
 
@@ -9,4 +9,16 @@ libs <- c("tidyverse", "ISLR", "modelr", "e1071", "ROCR")
 invisible(lapply(libs, library, character.only = TRUE))
 ```
 
-In clustering, we seek to partition the data into distinct groups so that the observations within each group are quite similar to each other, while observations in different groups are quite different from each other.
+In clustering, we seek to partition the data into distinct groups so that the observations within each group are quite similar to each other, while observations in different groups are quite different from each other. The two-best known clustering approaches:
+
+1. $K$-means clustering
+2. Hierarchical clustering
+
+# $K$-means Clsutering
+
+*Step 1: Choose the number $K$ of clusters.
+*Step 2: Select at random $K$ points, the centroid (not necessarily from yhr thr dataset).
+*Step 3: Assign each data point to the closet centroid. Form the $K$ clusters.
+*Step 4: Compute and place the new centroid of each cluster.
+*Step 5: Reassign each data point to the new closest centroid. If any reassignemtn took place, then go to Step 4, otherwise this is the final assignment of data points.
+
