--- a/Clustering.Rmd
+++ b/Clustering.Rmd
@@ -15,3 +15,17 @@ In clustering, we seek to partition the data into distinct groups so that the ob
 2. Hierarchical clustering
 
 
+# $K$-means clustering
+
+* Step 1: Choose the number $K$ of clusters.
+
+* Step 2: Select at random $K$ points, the centroid (not necessarily from the dataset).
+
+* Step 3: Assign each data point to the closet centroid. Form the $K$ clusters.
+
+* Step 4: Compute and place the new centroid of each cluster.
+
+* Step 5: Reassign each data point to the new closest centroid. If any reassignment took place, then go to Step 4, otherwise this is the final assignment of data points.
+
+[Python Code](k_means_clustering.ipynb)
+[R Code](k_means_clustering.R)
