--- a/Clustering.Rmd
+++ b/Clustering.Rmd
@@ -49,3 +49,5 @@ Hierarchical clustering is an alternative approach which does not require to spe
 [Python Code](hierarchical_clustering.ipynb)
 
 [R Code](hc.R)
+
+The advantage of $K$-means clustering is it is simple to understand, easily adaptable and works well on small and large datasets. The main disadvantage is you need to choose the number of clusters $K$. The advantage of hierarchical clustering is that the optimal number of clusters can be obtained by the model itself using the dendrogram. But, the hierarchical clustering is not appropriate for large datasets.
