--- a/SVM.Rmd
+++ b/SVM.Rmd
@@ -9,7 +9,9 @@ libs <- c("tidyverse", "ISLR", "modelr", "e1071", "ROCR")
 invisible(lapply(libs, library, character.only = TRUE))
 ```
 
-The support vector machine (SVM) is a group of classification algorithms that include a veriety of parametric and non-parametric models. The parametric models include straight lines and similar regression lines. The non-parametric models include a variety of kernel smoothing techniques.
+The support vector machine (SVM) is a group of classification algorithms that include a variety of parametric and non-parametric models. The parametric models include straight lines and similar regression lines. The non-parametric models include a variety of kernel smoothing techniques.
+
+The support vector machine is a generalization of maximum margin classifier. The maximum margin classifer that classifies the observation using the maximal margin hyperplane which is the seperating hyperplane that is farthest from the observations. The support vectors are the points (vectors in $p$-dimensional space) which "support" the maximal margin hyperplane in the sens that if these points were moved slightly then the maximal margin hyperplane would move as well. The maximal margin hyperplane depends directly on the support vectos, but not on the other observations.
 
 ## The advantages of support vector machines
 
